--- a/index.html
+++ b/index.html
@@ -13,14 +13,16 @@
             <div class="leftNav"><div class="logo"></div></div>
             <div class="rightNav">
                 <ul class="listItems">
+                     <i class="fa-solid fa-square-xmark" id="close"></i>
                      <li class="item" id="benefitNav">benefit</li>
                      <li class="item" id="navFlavor">Flavours</li>
                      <li class="item" id="navReviews" >reviews</li>
                      <li class="item">contact</li>
-                    
                 </ul>
             </div>
+             <i class="fa-solid fa-bars" id="menu"></i>
         </nav>
+        
      </header>
 
      <section class="section1">
