--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
      </section>
 
      <footer>
-          <p><i class="fa-solid fa-copyright"></i> 2025 Tasya.yoga Yoga</p>
+          <p><i class="fa-solid fa-copyright"></i> 2025 Vitacore</p>
     </footer>
 
 
